fixes company logos size and alignment issues

--- a/app/assets/stylesheets/splash.less
+++ b/app/assets/stylesheets/splash.less
@@ -157,12 +157,21 @@
 		&:hover{
 		    cursor: pointer;
 		    color: #989898;
-		    text-decoration: none; 
+		    text-decoration: none;
 		  }
 }
 
 .logo {
-	max-height:50px;
+	margin: auto;
+	max-width: 150px;
+}
+
+.google {
+	background-image: url('company_logos/google_logo.jpg');
+}
+
+.facebook {
+	background-image: url('company_logos/facebook_logo.jpg');
 }
 
 #splash-login {
